--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,26 +3,25 @@
 }
 
 body{
-    background-color: lightgray;
     margin: 0;
     padding: 0;
     background-image: url('../images/checkerboard-cross.png');
 }
 
 .navbar{
-    float: left;
     width: 100%;
     background-color: #fff;
     margin: 0, 0, 50px, 0;
     border-bottom: 1px, solid;
     color: #cccccc;
+    overflow: hidden;
+    
 }
-
 
 .navbar_container{
     width: 960px;
     margin: 0 auto;
-    background: #fff
+    
 }
 
 .navbar_left{
@@ -30,31 +29,58 @@ body{
     color: #fff;
     background-color: #4aaaa5;
     font-size: 25px;
-    padding: 28px, 20px;
+    padding: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+
+.navbar_right{
+    float: right;
+    height: 100%;
+}
+
+ul.navbar_menu{
+
+    list-style-type: none;
+    margin-top: 35px;
+}
+
+ul.navbar_menu li{
+    display: inline-block;
+    height: 100%;
+    padding: 0px, 15px;
+    margin: 40px, 0;
+    font-size: 15px;
+}
+
+ul.navbar_menu li a{
+    color: #999;
+    text-decoration: none;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
-.nav_bar::after{
-    content: "";
-    display: table;
-    clear: both;
+
+.main{
+    margin-top: 20px;
+    margin-bottom: 100px;
+    background-color: white;
+    max-width: 960px;
+    margin: auto;
+    display: block;
+    padding: 20px;
 }
 
-
-h1{
+h1, h2, h6{
     color: #4aaaa5;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 28px;
 }
 
-main{
-    background-color: white;
-    max-width: 960px;
-    margin: auto;
-    margin-top: 90px;
-    display: block;
-    padding: 20px;
-    
+h3, h4, h5{
+    color: #999;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 p{
@@ -88,13 +114,6 @@ p{
     border-color: #4aaaa5;
 }
 
-}
-
-body{
-    background-color: lightgrey;
-    margin: 0;
-    padding: 0;
-}
 
 input[type="submit"]{
     background-color: #4aaaa5;
@@ -104,13 +123,38 @@ input[type="submit"]{
     padding: 10px
 }
 
-h3, h4, h5{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #777777;
-    font-size: 15px
-}
 
 h6{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #4aaaa5
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.row::after{
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.container{
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    float: left;
+    width: 25%;
+    padding: 5px;
+    margin-top: 10px;
+}
+
+.text-block{
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+    background-color: #4aaaa5;
+    padding-left: 65px;
+    padding-right: 65px;
+    color: white;
+}
+
+h1, h2{
+    margin-top: 50px
 }
